i fixed the gap on the right of the page

--- a/react-portfolio/src/App.module.css
+++ b/react-portfolio/src/App.module.css
@@ -6,3 +6,9 @@
     width: 100%;
     height: 100%;
   }
+
+  body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  }
